# pymediaserver

./: .cursorrules  .gitignore  main.py  pyproject.toml  todo.md
src/: job_dispatcher.py  job_manager.py  run_services.py  service_dispatcher.py  service_manager.py
src/common/: base.py  base_service.py  config.py  db.py  dto.py  ffmpeg_builder.py  file.py  http_client.py  logger.py  models.py  system_types.py  types.py  utils.py
src/services/: cleanup.py  watchdog.py
src/workers/: ffprobe.py  file_matcher.py  image_downloader.py  media_scanner.py  metadata_matcher.py  movie_matcher.py  transcoder.py  tv_matcher.py
tests/: conftest.py  test_job_dispatcher.py
tests/common/: test_ffmpeg_builder.py  test_http_client.py
tests/services/: test_cleanup.py  test_watchdog.py
tests/workers/: __init__.py  test_ffprobe.py  test_file_matcher.py  test_image_downloader.py  test_media_scanner.py  test_metadata_matcher.py  test_movie_matcher.py  test_tv_matcher.py
