[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-server"
version = "0.1.0"
description = "Media Server Application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "aiosqlite>=0.21.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.9.9",
    "sqlalchemy>=2.0.38",
    "watchdog>=6.0.0",
    "python-dotenv>=1.0.1",
    "mypy>=1.15.0",
    "flask>=3.1.0",
    "hypercorn>=0.17.3",
    "aiodns>=3.2.0",
    "certifi>=2025.1.31",
    "uvloop>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.ruff]
target-version = "py310"
